# platform-operator

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  minikube_deployment.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml  release.yml  test.yaml  update-pre-commit.yml
charts/platform/: Chart.yaml  values.yaml
charts/platform-adjust-inotify/: Chart.yaml  values.yaml
charts/platform-adjust-inotify/templates/: _helpers.tpl  adjust-inotify-daemon-set.yaml
charts/platform-adjust-inotify/tests/: adjust-inotify_test.yaml
charts/platform-common/: Chart.yaml
charts/platform-common/templates/: jobs-namespace.yaml  rbac.yaml  services-priority-class.yaml
charts/platform-common/tests/: jobs-namespace_test.yaml  rbac_test.yaml  services-priority-class_test.yaml
charts/platform-external-secrets/: Chart.yaml  values.yaml
charts/platform-external-secrets/templates/: cluster-vault-secret-store.yaml  external-secrets.yaml
charts/platform-external-secrets/tests/: cluster-vault-secret-store_test.yaml  external-secrets_test.yaml
charts/platform-ingress/: Chart.yaml  values.yaml
charts/platform-ingress/templates/: _helpers.tpl  cors-middleware.yaml  error-page-middleware.yaml  fallback-ingress.yaml  fallback-middleware.yaml  fallback-svc.yaml  federated-prometheus-auth-middleware.yaml  ingress-auth-middleware.yaml  strip-headers-middleware.yaml
charts/platform-ingress/tests/: cors-middleware_test.yaml  error-page-middleware_test.yaml  fallback-ingress_test.yaml  fallback-middleware_test.yaml  fallback-svc_test.yaml  federated-prometheus-auth-middleware_test.yaml  ingress-auth-middleware_test.yaml  strip-headers-middleware_test.yaml
charts/platform-operator/: Chart.yaml  values-standalone.yaml  values.yaml
charts/platform-operator/crds/: platform.yaml
charts/platform-operator/files/: cluster.json.tpl
charts/platform-operator/templates/: _helpers.tpl  controller-deployment.yaml  crds-configmap.yaml  crds-job.yaml  crds-rbac.yaml  deployment-start-job.yaml  lock-secret.yaml  operator-hook-priority-class.yaml  rbac.yaml  service-account.yaml  services-priority-class.yaml  upgrade-end-job.yaml  upgrade-rbac.yaml  upgrade-start-job.yaml
charts/platform-volumes/: Chart.yaml  values.yaml
charts/platform-volumes/templates/: _helpers.tpl  pv.yaml  pvc.yaml
charts/platform-volumes/tests/: pv_test.yaml  pvc_test.yaml
charts/platform/files/: resolve_dns_challenge.sh
charts/platform/templates/: _helpers.tpl  acme-ca-cert-daemon-set.yaml  acme-certs-config-map.yaml  acme-certs-deployment.yaml  acme-certs-pvc.yaml  acme-certs-rbac.yaml  adjust-inotify-daemon-set.yaml  alertmanager-config-secret.yaml  alloy-application.yaml  azure-storage-account-secret.yaml  cluster-secret-store.yaml  cluster-vault-secret-store.yaml  dns-challenge-secret.yaml  docker-registry-application.yaml  egress-to-ingress-network-policy.yaml  egress-to-kubernetes-api-network-policy.yaml  external-secrets-application.yaml  external-secrets.yaml  fallback-ingress.yaml  grafana-application.yaml  idle-jobs-deployment.yaml  idle-jobs-priority-class.yaml  idle-jobs-secret.yaml  idle-nodes-deployment.yaml  ingress.yaml  jobs-cluster-role-binding.yaml  jobs-namespace.yaml  jobs-priority-class.yaml  jobs-pv.yaml  jobs-pvc.yaml  keda-add-ons-http-application.yaml  keda-application.yaml  kube-prometheus-stack-application.yaml  loki-application.yaml  minio-application.yaml  minio-ingress.yaml  platform-adjust-inotify-application.yaml  platform-api-poller-application.yaml  platform-buckets-application.yaml  platform-common-application.yaml  (+25 more)
charts/platform/tests/: alertmanager-config-secret_test.yaml  alloy-application_test.yaml  cluster-vault-secret-store_test.yaml  common-values.yaml  docker-registry-application_test.yaml  external-secrets-application_test.yaml  external-secrets_test.yaml  grafana-application_test.yaml  keda-add-ons-http-application_test.yaml  keda-application_test.yaml  kube-prometheus-stack-application_test.yaml  loki-application_test.yaml  minio-application_test.yaml  platform-api-poller-application_test.yaml  platform-buckets-application_test.yaml  platform-container-runtime-application_test.yaml  platform-disks-application_test.yaml  platform-ingress-application_test.yaml  platform-metadata-application_test.yaml  platform-monitoring-application_test.yaml  platform-registry-application_test.yaml  platform-reports-application_test.yaml  platform-secrets-application_test.yaml  platform-storage-application_test.yaml  platform-volumes-application_test.yaml  postgres-operator-application_test.yaml  spark-operator-application_test.yaml  thanos-application_test.yaml  traefik-application_test.yaml
deploy/platform/: Chart.yaml  requirements.yaml  values-template.yaml  values.yaml
deploy/platform-operator/: Chart.yaml  requirements.yaml  values-template.yaml  values.yaml
deploy/platform-operator/crds/: platform.yaml
deploy/platform-operator/templates/: _helpers.tpl  controller-deployment.yaml  crd-platform.yaml  crd.yaml  crds-job.yaml  crds-rbac.yaml  deployment-end-job.yaml  rbac.yaml  tiller-deployment.yaml  tiller-service.yaml
deploy/platform/files/: resolve_dns_challenge.sh
deploy/platform/templates/: _helpers.tpl  acme-ca-cert-daemon-set.yaml  adjust-inotify-daemon-set.yaml  azure-storage-account-secret.yaml  blob-storage-key-secret.yaml  disks-storage-class.yaml  dns-challenge-config-map.yaml  docker-config-secret.yaml  (+29 more)
platform_operator/: aws_client.py  certificate_store.py  config_client.py  consul_client.py  handlers.py  helm_client.py  helm_hooks.py  helm_values.py  kube_client.py  models.py  operator.py
requirements/: dev.txt
tests/: conftest.py
tests/integration/: aws.py  conftest.py  kube.py  test_aws_client.py  test_consul_client.py  test_helm_client.py  test_helm_hooks.py  test_kube_client.py  test_operator.py
tests/unit/: test_certificate_store.py  test_consul_client.py  test_handlers.py  test_helm_client.py  test_helm_values.py  test_kube_client.py  test_models.py  test_operator.py
(+111 files in other folders)
