[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "platform-operator"
version = "0.0.0"
description = "Apolo platform operator"
readme = "README.md"
license = "Proprietary"
authors = [
    { name = "Apolo.us", email = "support@apolo.us" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "kopf==1.38.0",
    "aiohttp==3.11.18",
    "pyyaml==6.0.2",
    "aiobotocore==2.22.0",
    "bcrypt==4.3.0",
    "neuro-config-client==25.2.0"
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
moto = { version = "5.1.4", extras = ["server"] }
mypy = "1.15.0"
pre-commit = "4.2.0"
pytest = "8.3.5"
pytest-aiohttp = "1.1.0"
pytest-asyncio = "0.26.0"
types-PyYAML = "*"
types-Werkzeug = "*"
pytest-cov = "6.1.1"

[tool.black]
exclude = '''
/(
      \.git
    | venv
    | __pycache__
    | \.tox
)/
'''

[tool.isort]
line_length = 88
include_trailing_comma = true
multi_line_output = 3
combine_as_imports = true

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "I", "C90", "UP", "B", "ASYNC", "N", "FBT", "A", "C4", "EM", "FA", "ICN",
    "G", "PIE", "T20", "PYI", "PT", "RET", "PTH"
]
ignore = [
    "A003",
    "N818",
    "PT005"
]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
known-first-party = ["platform_operator", "tests"]
known-third-party = []

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["platform_operator"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "setuptools"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kopf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiobotocore.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "moto.*"
ignore_missing_imports = true
