[metadata]
name = platform-operator
description = Neu.ro platform operator
url = https://github.com/neuro-inc/platform-operator
long_description = file: README.md, LICENSE
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache 2
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.9
include_package_data = True
packages = find:
platforms = any
install_requires =
    kopf==1.35.4
    aiohttp==3.8.1
    pyyaml==6.0
    aiobotocore==2.3.3
    bcrypt==3.2.2
    neuro-logging==21.12.2
    neuro-config-client==22.6.0

[options.extras_require]
dev =
    moto[server]==3.1.14
    mypy==0.961
    pre-commit==2.19.0
    pytest==7.1.2
    pytest-aiohttp==1.0.4
    pytest-asyncio==0.18.3
    types-PyYAML
    types-Werkzeug

[flake8]
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541

[tool:pytest]
testpaths = tests
asyncio_mode = auto

[coverage:run]
branch = True
source = platform_operator

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
no_implicit_optional=true

[mypy-pytest]
ignore_missing_imports = true

[mypy-setuptools]
ignore_missing_imports = true

[mypy-kopf.*]
ignore_missing_imports = true

[mypy-aiobotocore.*]
ignore_missing_imports = true

[mypy-moto.*]
ignore_missing_imports = true
